--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 <div id="btnDirectPay"></div>
                 <br/>
                 <div id="directPayQr"></div>
+                <br/>
+                <a href="https://raw.githubusercontent.com/nimeshc64/directPayCheckoutButton/master/directPayCheckout.js" class="btn btn-success btn-block">
+                    Download js File
+                </a>
+
             </div>
 
             <div class="col-md-8">
