chnage download url

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <br/>
                 <div id="directPayQr"></div>
                 <br/>
-                <a href="https://raw.githubusercontent.com/nimeshc64/directPayCheckoutButton/master/directPayCheckout.js" class="btn btn-success btn-block">
+                <a href="https://raw.githubusercontent.com/nimeshc64/directPayCheckoutButton/master/directPayCheckout.min.js" class="btn btn-success btn-block">
                     Download js File
                 </a>
 
