--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             "merchantId":"819934bd-3409-442a-9fed-ccfa8e77ba93",
             "checkoutBtn":"btnDirectPay",
             "qrCode":"directPayQr",
-            "amount":2000,
+            "amount":2000.00
             "invoiceId":"1234"
         };
         window.onload = function() {
